--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* Estilo Global */
 body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
@@ -28,7 +27,6 @@ body {
   margin: 0;
 }
 
-/* Estilo do Grid */
 .grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -38,7 +36,6 @@ body {
   margin: 0 auto;
 }
 
-/* Cartões */
 .card {
   position: relative;
   padding: 20px;
@@ -47,6 +44,7 @@ body {
   text-align: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  font-family: 'Permanent Marker', sans-serif;
 }
 
 .card:hover {
@@ -67,7 +65,6 @@ body {
   cursor: pointer;
 }
 
-/* Modal (Popup) */
 .modal {
   display: none;
   position: fixed;
@@ -80,7 +77,6 @@ body {
   align-items: center;
 }
 
-/* Conteúdo do Modal */
 .modal-content {
   background: white;
   padding: 20px;
@@ -90,7 +86,6 @@ body {
   position: relative;
 }
 
-/* Botão de Fechar (X) */
 .close {
   position: absolute;
   top: 10px;
@@ -99,7 +94,6 @@ body {
   cursor: pointer;
 }
 
-/* Botão de Link */
 .modal-content a {
   display: inline-block;
   margin-top: 15px;
@@ -114,7 +108,12 @@ body {
   background-color: #0056b3;
 }
 
-/* Responsividade */
+.permanent-marker-regular {
+  font-family: "Permanent Marker", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 @media (max-width: 768px) {
   .grid {
     grid-template-columns: repeat(2, 1fr);
